# fs_flowstate_svc

./: API.md  Makefile  README.md  pyproject.toml
docs/: API_inbox_filters.md
migrations/: env.py
migrations/versions/: 1778d69cdf8c_create_user_reminder_preference_model.py  286e24990b8e_create_initial_flowstate_database_models.py  2c1b2fd6eb95_create_flowstate_database_models_with_.py  79d626584b65_add_fields_to_reminder_settings.py  d77aa19050d6_add_password_reset_columns_to_users_.py  d9d977559d32_add_metadata_column_to_events_table.py
src/fs_flowstate_svc/: app.py  config.py  main.py
tests/: conftest.py  test_alembic_config.py  test_api_documentation.py  test_auth_api.py  test_config.py  test_exception_handlers.py  test_flowstate_models.py  test_imports.py  test_migration_001_initial.py  test_models.py  test_reminder_settings_new_fields.py  test_smoke.py  test_user_reminder_preference_model.py
tests/api/: test_ai_router.py  test_event_api.py  test_event_realtime.py  test_inbox_api.py  test_inbox_convert_api.py  test_inbox_realtime.py  test_reminder_router.py  test_websocket_router.py
tests/auth/: test_jwt_handler.py  test_security.py
tests/frontend/: test_auth_ui.py  test_auth_utils.py  test_inbox_accessibility.py  test_inbox_drag_to_calendar.py  test_inbox_filters_module.py  test_inbox_help_overlay.py  test_inbox_page.py  test_inbox_page_enhanced.py  test_inbox_shortcuts.py  test_timeline_calendar_page.py  test_timeline_drag_drop.py  test_websocket_client.py  test_websocket_client_extra.py
tests/schemas/: test_inbox_schemas.py
(+50 files in other folders)
